<resources>
    <string name="app_name">E-Self Redeemer</string>
    <string name="google_maps_key" translatable="false">AIzaSyAQ51Bejel1ohyxPdoK4-N9q8yMmYJYnDA</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="nav_alert_tag">Alert Tags</string>
    <string name="nav_organization">Organizations</string>
    <string name="nav_current_location">Current Location</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_capture">Capture</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_rate_us">Rate Us</string>
    <string name="drawer_about_the_apps">About the App</string>
    <string name="action_settings">Action Settings</string>
    <string name="drawer_notification_settings">Notification Settings</string>
    <string name="drawer_admin">Admin</string>
    <string name="drawer_coordinator">Coordinator</string>
    <string name="facebook">Facebook</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_add_fire_services">Add Fire Stations</string>
    <string name="drawer_add_police_stations">Add Police Stations</string>
    <string name="drawer_add_hospitals">Add Hospitals</string>
    <string name="drawer_ambulances">Add Ambulances</string>
    <string name="Communicate">Communicate</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fire_station_name">Fire Station Name</string>
    <string name="fire_station_location">Fire Station location</string>
    <string name="fire_station_phone_number">Fire Station Phone Number</string>
    <string name="fire_station_email">Fire Station Email</string>
    <string name="fire_station_description">Fire Station Description</string>
    <string name="register">Register</string>
    <string name="add_fire_services">Fire Services</string>
    <string name="add_ambulance_name">Ambulance Name</string>
    <string name="my_email">sifatabdullah386@gmail.com</string>
    <string name="panic_button">Help!!</string>
    <string name="feed_back">Feed Back</string>
    <string name="fire_station">Fire Station</string>
    <string name="police_station">Police Station</string>
    <string name="emergency_medical">Emergency \n Medical</string>
    <string name="sexual_harassment">Sexual \n  Harassment</string>
    <string name="traffic_accident">Traffic \n Accident</string>
    <string name="organization_name">Define Organization Name</string>
    <string name="organization_location">Organization Location</string>
    <string name="organization_phone_number">Organization Phone Number</string>
    <string name="organization_email">Organization Email</string>
    <string name="organization_description">Organization Description</string>
    <string name="title_activity_maps_collect_location">Collect Location Map</string>
    <string name="all_details">Enter all details</string>
    <string name="enter_username">Enter Username</string>
    <string name="title_activity_pick_place">Map</string>
    <string name="drawer_privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="ambulance_description">Ambulance Description</string>
    <string name="ambulance_email">Ambulance Email</string>
    <string name="ambulance_location">Ambulance Location</string>
    <string name="ambulance_phone_number">Ambulance Phone Number</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="hospital_phone_number">Hospital Phone NUmber</string>
    <string name="hospital_email">Hospital Email</string>
    <string name="hospital_description">Hospital Description</string>
    <string name="ambulances">Ambulances</string>
    <string name="hospitals">Hospitals</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="add_ambulances">Add Ambulances</string>
    <string name="add_hospitals">Add Hospitals</string>
    <string name="add_organizations">Add Organizations</string>
    <string name="add_police_stations">Add Police Stations</string>
    <string name="add_fire_stations">Add Fire Stations</string>
    <string name="about_police_station">About Police Station</string>
    <string name="police_station_email">Police Station Email</string>
    <string name="police_station_phone_number">Police Station Phone Number</string>
    <string name="police_station_location">Police Station Location</string>
    <string name="police_station_name">Police Station Name</string>
    <string name="about_fire_station">About Fire Station</string>
    <string name="take_a_criminal_picture">Take a \n Criminal Picture</string>
    <string name="upload_from_gallery">Upload from \n gallery</string>
    <string name="criminal_photos">Criminal Photos Send from the Victims</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="guest_login">Guest Login</string>
    <string name="live_record">Live Record</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_what_s_happening">Record what\'s Happening</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="alert_my_contact">Alert My Contacts</string>
    <string name="contact_name_1">Contact Name 1</string>
    <string name="phone_number_1">Phone Number 1</string>
    <string name="contact_name_2">Contact Name 2</string>
    <string name="phone_number_2">Phone Number 2</string>
    <string name="contact_name_3">Contact Name 3</string>
    <string name="phone_number_3">Phone Number 3</string>
    <string name="add_three_important_emergency_contacts_here">Add Three Important Emergency Contacts Here</string>
    <string name="add_contacts">Add contacts</string>
    <string name="sign_in">Sign In</string>
    <string name="delete_request">Delete Request</string>
    <string name="_0">0</string>
    <string name="personal_requests">Personal Requests</string>
    <string name="public_request">Public Request</string>
    <string name="update_profile">Update Profile</string>
    <string name="your_requests">Your Requests</string>
    <string name="your_response">Your response</string>
    <string name="location">Location</string>
    <string name="message">Message</string>
    <string name="phone_number">Phone Number</string>
    <string name="help_request">Help Request</string>

    <string name="total_user">Total \n User</string>
    <string name="total_user_number">…</string>
    <string name="total_organization">Total \n Organization</string>
    <string name="total_user_organization">…</string>
    <string name="total_volunteer">Total \n Volunteer</string>
    <string name="total_user_volunteer">…</string>
    <string name="nav_volunteers">Volunteers</string>
    <string name="request_for_help">Request for help</string>
    <string name="write_message">Write some messages or you can leave as blank</string>
    <string name="traffic_help">Request Help For Traffic Accident</string>
    <string name="sexual_harassment_help">"Request Help For Sexual Harassment "</string>
    <string name="request_for_emergency_medical_help">Request For Emergency Medical Help</string>
    <string name="app_theme">Rescue assistant for helpless people</string>
    <string name="donate">Donate Food / Clothes / Utilities</string>
    <string name="donation_feedback">Donation \n Feedback</string>
    <string name="request_food_clothes_utilities">Request Food / Clothes / Utilities</string>
    <string name="admin_password">Admin Password</string>
    <string name="login">Login</string>
    <string name="admin_username">Admin Username</string>
    <string name="add_volunteers">Add Volunteers</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="volunteer_location">Volunteer Location</string>
    <string name="about_yourself">About Yourself</string>
    <string name="logout">Logout</string>

</resources>
