<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".addFireServices">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/add_fire_services_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="#F44336"
      android:elevation="8dp">
    <TextView
        android:text="@string/add_fire_services"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"/>
  </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#f3f1f4"
        android:weightSum="6"
        android:elevation="18dp"
        android:layout_gravity="center">
      <EditText
          android:id="@+id/add_fire_station_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:textStyle="bold"
          android:textSize="18sp"
          android:inputType="textPersonName"
          android:hint="@string/fire_station_name"
          android:importantForAutofill="no" />

      <EditText
          android:id="@+id/add_fire_station_location"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/fire_station_location"
          android:inputType="textMultiLine"
          android:padding="10dp"
          android:textSize="18sp"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/add_fire_station_phone_number"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/fire_station_phone_number"
          android:inputType="phone"
          android:padding="10dp"
          android:textSize="18sp"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/add_fire_station_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/fire_station_email"
          android:inputType="textEmailAddress"
          android:padding="10dp"
          android:textSize="18sp"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/add_fire_station_description"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/about_fire_station"
          android:inputType="text|textMultiLine"
          android:padding="10dp"
          android:textSize="18sp"
          android:textStyle="bold" />
      <Button
          android:id="@+id/add_fire_services_submit"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_marginTop="30dp"
          android:layout_width="300dp"
          android:layout_weight="1"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:backgroundTint="#F44336"
          android:backgroundTintMode="src_over"
          android:textStyle="bold"
          android:textSize="26sp"
          android:elevation="8dp"
          android:text="@string/register" />
    </LinearLayout>
</LinearLayout>