<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".admin.addPoliceStations">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/add_police_stations_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="#3F51B5"
      android:elevation="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">
    <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/drawer_add_police_stations"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>
  </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#f3f1f4"
        android:weightSum="6"
        android:elevation="18dp"
        android:layout_gravity="center">

      <EditText
          android:id="@+id/add_police_station_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_background"
          android:drawableStart="@drawable/ic_person_black_24dp"
          android:drawablePadding="15dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/police_station_name"
          android:inputType="textPersonName"
          android:padding="10dp"
          android:textSize="18sp" />

      <TextView
          android:id="@+id/add_police_station_location"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_background"
          android:drawableStart="@drawable/ic_location_on_black_24dp"
          android:drawablePadding="15dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:gravity="start|center"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/police_station_location"
          android:textSize="18sp"/>

      <EditText
          android:id="@+id/add_police_station_phone_number"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_background"
          android:drawableStart="@drawable/ic_phone_black_24dp"
          android:drawablePadding="15dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/police_station_phone_number"
          android:inputType="phone"
          android:padding="10dp"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/add_police_station_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_background"
          android:drawableStart="@drawable/ic_email_black_24dp"
          android:drawablePadding="15dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/police_station_email"
          android:inputType="textEmailAddress"
          android:padding="10dp"
          android:textSize="18sp" />

      <EditText
          android:id="@+id/add_police_station_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edit_text_background"
          android:drawableStart="@drawable/ic_description_black_24dp"
          android:drawablePadding="15dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/about_police_station"
          android:inputType="text|textMultiLine"
          android:padding="10dp"
          android:textSize="18sp" />
      <Button
          android:id="@+id/add_police_station_submit"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="50dp"
          android:layout_width="200dp"
          android:layout_weight="1"
          android:layout_height="20dp"
          android:layout_gravity="center"
          android:textColor="#000000"
          android:background="@drawable/btn_shape_police_station"
          android:backgroundTintMode="src_over"
          android:textStyle="bold"
          android:textSize="22sp"
          android:elevation="4dp"
          android:text="@string/register" />
    </LinearLayout>
</LinearLayout>